welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:64: error: not found: value faireV
  faireV(Color.YELLOW)
  ^PatternPicture:65: error: not found: value faireV
  faireV(Color.GREEN)
  ^